@@ -16,7 +16,7 @@ class InMemoryHistoryManagerTest {
     Task task2;
 
     @BeforeEach
-    public void initialization() {
+    public void initialization() { //инициализация
         manager = Managers.getDefault();
         task1 = new Task("Task 1", "Task 1 description");
         task2 = new Task("Task 2", "Task 2 description");
@@ -25,47 +25,52 @@ class InMemoryHistoryManagerTest {
     }
 
     @Test
-    public void checkingThatTheHistoryIsBeingAdded() {
+    public void checkingThatTheHistoryIsBeingAdded() { //проверка заполнения истории
         List<Task> tasks = new LinkedList<>();
         tasks.add(manager.getTaskById(task1.getId()));
         tasks.add(manager.getTaskById(task2.getId()));
         Assertions.assertNotNull(manager.getHistory());
         Assertions.assertEquals(manager.getHistory(), tasks);
     }
+
     @Test
-    public void checkingThatEpicDoesNotChangeInHistory() {
-        Epic epic1 = new Epic("Epic1", "Description");
+    public void checkingThatEpicDoesNotChangeInHistory() { //проверка неизменности эпика в истории
+        Epic epic1 = new Epic("a", "");
         manager.createEpic(epic1);
         manager.getEpicById(epic1.getId());
-        epic1.setName("Epic 11");
+        epic1.setName("b");
         manager.updateEpic(epic1);
-
-        Assertions.assertNotEquals(manager.getHistory().getFirst().getName(),
-                                   manager.getEpicById(epic1.getId()));
+        Assertions.assertNotEquals(manager.getHistory().get(0).getName(),
+                                   manager.getEpicById(epic1.getId()).getName());
     }
 
     @Test
-    public void checkingThatSubtaskDoesNotChangeInHistory() {
+    public void checkingThatDuplicateRemoveFromHistory() { //проверка удаления дублирующейся записи из истории
+        manager.getTaskById(task1.getId());
+        manager.getTaskById(task2.getId());
+        manager.getTaskById(task1.getId());
+        List<Task> tasks = manager.getHistory();
+        Assertions.assertEquals(2, tasks.size());
+    }
+
+    @Test
+    public void checkingThatSubtaskDoesNotChangeInHistory() { //проверка неизменности подзадачи в истории
         Epic epic = manager.createEpic(new Epic("", ""));
         Subtask subtask = manager.createSubtask(new Subtask("a", "", epic.getId()));
         manager.getSubtaskById(subtask.getId());
         subtask.setName("b");
         manager.updateSubtask(subtask);
-
-        Assertions.assertNotEquals(manager.getHistory().getFirst().getName(),
+        Assertions.assertNotEquals(manager.getHistory().getLast().getName(),
                                    manager.getSubtaskById(subtask.getId()).getName());
     }
 
     @Test
-    public void checkingThatTaskDoesNotChangeInHistory() {
+    public void checkingThatTaskDoesNotChangeInHistory() { //проверка неизменности задачи в истории
         Task task = manager.createTask(new Task("a", ""));
         manager.getTaskById(task.getId());
         task.setName("b");
         manager.updateTask(task);
-
-        Assertions.assertNotEquals(
-                manager.getHistory().getFirst().getName(),
-                manager.getTaskById(task.getId()).getName());
+        Assertions.assertNotEquals(manager.getHistory().getFirst().getName(),
+                                   manager.getTaskById(task.getId()).getName());
     }
-
 }
